Add view activities endpoints: GET list, archived, by ID with LATERAL JOIN (task 4)
